--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
             <div class="logo">Kiara</div>
             <nav>
                 <ul style="list-style-type: none; padding: 0; display: flex; gap: 1rem;">
-                    <li><a href="/index.html" style="color: white; text-decoration: none;">Reload</a></li>
-                    <li><a href="/entries/seeya.html" style="color: white; text-decoration: none;">seeya</a></li>
+                    <li><a href="index.html" style="color: white; text-decoration: none;">Reload</a></li>
+                    <li><a href="entries/seeya.html" style="color: white; text-decoration: none;">seeya</a></li>
                     <!-- Add the cart display -->
                     <li><span id="cartCount" style="position: fixed; top: 20px; right: 20px; cursor: pointer; font-size: 24px;
                         background-color: #CCCCFF;
